terraform/routeTables.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "public-route-table"
  }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "private-route-table"
  }
}
 
 resource "aws_route_table_association" "public_sub1_association" {
  subnet_id      = aws_subnet.public_sub1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_sub2_association" {
  subnet_id      = aws_subnet.public_sub2.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_sub1_association" {
  subnet_id      = aws_subnet.private_sub1.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_sub2_association" {
  subnet_id      = aws_subnet.private_sub2.id
  route_table_id = aws_route_table.private.id
}
